examples/err-doubledecl1.uc
f(z) {
  var v,x,q;
  var q; // error: identifier already declared

  return 0;
}